--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="my_pic.jpg" alt="Nikhil's profile picture"></td>
+      <td><img src="my_pic.jpg.png" alt="Nikhil's profile picture"></td>
       <td>
         <h1>Nikhil</h1>
         <p> <em> Student at <strong><a href="https://www.nitp.ac.in">NITP</a></strong>.</em> </p>
